# p2pmess

./: LICENSE  README.md  p2p_editor.py  pyproject.toml
p2pmess/: __init__.py  __main__.py
